--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "hybrid-routing",
-  "version": "1.0.0",
-  "description": "This is a hybrid web app that combines server-side rendering with client-side routing.",
-  "main": "eslint.config.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
+    "eslint": "^9.19.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mongoose": "^8.9.5"
-  }
+  },
+  "description": "This is a hybrid web app that combines server-side rendering with client-side routing.",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": [],
+  "license": "ISC",
+  "main": "eslint.config.js",
+  "name": "hybrid-routing",
+  "scripts": {
+    "start": "nodemon src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "type": "commonjs",
+  "version": "1.0.0"
 }
