--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "author": "",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "eslint": "^9.19.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.6"
   },
   "description": "This is a hybrid web app that combines server-side rendering with client-side routing.",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "eslint": "^9.19.0"
+  },
   "directories": {
     "test": "test"
   },
