--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
-    "eslint": "^9.19.0"
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier-eslint": "^16.3.0"
   },
   "directories": {
     "test": "test"
