--- a/.prettierrc
+++ b/.prettierrc
@@ -17,10 +17,7 @@
       }
     },
     {
-      "files": [
-        "*.yaml",
-        "*.yml"
-      ],
+      "files": ["*.yaml", "*.yml"],
       "options": {
         "tabWidth": 2
       }
