--- a/.prettierrc
+++ b/.prettierrc
@@ -17,7 +17,10 @@
       }
     },
     {
-      "files": ["*.yaml", "*.yml"],
+      "files": [
+        "*.yaml",
+        "*.yml"
+      ],
       "options": {
         "tabWidth": 2
       }
