--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "main": "eslint.config.js",
   "name": "hybrid-routing",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
