Before applying tsc checks to all files in src

--- a/v0.0.1/.vscode/settings.json
+++ b/v0.0.1/.vscode/settings.json
@@ -7,10 +7,8 @@
       "scope": "folder"
     }
   },
-  "cSpell.ignoreWords": ["Zner", "nylsuxlvho"],
+  "cSpell.ignoreWords": [],
   "cSpell.words": [
-    "aproba",
-    "arrayof",
     "Grabbable",
     "kgolov",
     "mapbox",
