--- a/v0.0.1/package.json
+++ b/v0.0.1/package.json
@@ -20,7 +20,10 @@
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
-    "prettier-eslint": "^16.3.0"
+    "prettier-eslint": "^16.3.0",
+    "ts-loader": "^9.5.2",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   },
   "directories": {
     "test": "test"
@@ -30,6 +33,8 @@
   "main": "eslint.config.js",
   "name": "hybrid-routing",
   "scripts": {
+    "-build": "webpack",
+    "build": "tsc",
     "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
