--- a/v0.0.1/package.json
+++ b/v0.0.1/package.json
@@ -4,6 +4,7 @@
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
+    "debug": "^4.4.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
+    "@types/debug": "^4.1.12",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/node": "^22.13.1",
@@ -41,7 +43,7 @@
   "name": "hybrid-routing",
   "scripts": {
     "-build": "webpack",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.views.json",
     "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
