--- a/v0.0.1/tsconfig.views.json
+++ b/v0.0.1/tsconfig.views.json
@@ -5,7 +5,8 @@
     /* Projects */
     "incremental": true,                                 /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
     // "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
-    "tsBuildInfoFile": "./tmp/tsconfig.tsbuildinfo",     /* Specify the path to .tsbuildinfo incremental compilation file. */
+    "tsBuildInfoFile": "./tmp/tsconfig.views.tsbuildinfo",
+                                                         /* Specify the path to .tsbuildinfo incremental compilation file. */
     // "disableSourceOfProjectReferenceRedirect": true,  /* Disable preferring source files instead of declaration files when referencing composite projects. */
     // "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference checking when editing. */
     // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
@@ -26,7 +27,7 @@
 
     /* Modules */
     "module": "ESNext",                                  /* Specify what module code is generated. */
-    "rootDir": "./src",                                  /* Specify the root folder within your source files. */
+    "rootDir": "./src/views",                            /* Specify the root folder within your source files. */
     "moduleResolution": "node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",                                     /* Specify the base directory to resolve non-relative module names. */
     "paths": {
@@ -60,7 +61,7 @@
     // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
     // "noEmit": true,                                   /* Disable emitting files from a compilation. */
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
-    "outDir": "./dist/",                                 /* Specify an output folder for all emitted files. */
+    "outDir": "./public/",                                 /* Specify an output folder for all emitted files. */
     "removeComments": true,                              /* Disable emitting comments. */
     // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
     // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
@@ -111,11 +112,7 @@
     "skipLibCheck": false                                /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*"
+    "src/views/**/*"
   ],
-  "exclude": [
-    "node_modules",
-    "dist", 
-    "src/views/**/*" // Exclude the views folder from this build
-  ]
+  "exclude": ["node_modules", "dist"]
 }
