--- a/v0.0.1/.prettierrc
+++ b/v0.0.1/.prettierrc
@@ -28,7 +28,7 @@
   ],
   "printWidth": 80,
   "quoteProps": "as-needed",
-  "semi": true,
+  "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
