--- a/v0.0.1/package.json
+++ b/v0.0.1/package.json
@@ -2,15 +2,19 @@
   "author": "",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.96",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "connect-mongo": "^5.1.0",
     "debug": "^4.4.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-session": "^1.18.1"
+    "express-session": "^1.18.1",
+    "mongoose": "^8.11.0"
   },
   "description": "This is a hybrid web app that combines server-side rendering with client-side routing.",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/debug": "^4.1.12",
     "@types/dotenv": "^6.1.1",
@@ -21,7 +25,9 @@
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.5.2",
+    "prettier-eslint": "^16.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
@@ -36,5 +42,6 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "version": "1.0.0"
 }
