--- a/v0.0.1/.vscode/settings.json
+++ b/v0.0.1/.vscode/settings.json
@@ -16,8 +16,25 @@
     "sortkeybindings",
     "Zerkalny"
   ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "always"
+  },
+  "eslint.enable": true,
+  "eslint.lintTask.enable": true,
+  "eslint.lintTask.options": ".", // Lint all files in the workspace
+  "eslint.probe": [
+    "javascript",
+    "typescript"
+  ], // Ensure ESLint works for JS/TS files
+  "eslint.run": "onType", // Lint as you type
+  "eslint.validate": [
+    "javascript",
+    "typescript",
+    "javascriptreact",
+    "typescriptreact"
+  ],
   "files.exclude": {
     "**/.git": false
   },
-  "terminal.integrated.cwd": "${fileDirname}",
+  "terminal.integrated.cwd": "${fileDirname}"
 }
