--- a/v0.0.1/package.json
+++ b/v0.0.1/package.json
@@ -1,4 +1,12 @@
 {
+  "_moduleAliases": {
+    "@": "src",
+    "@middleware": "src/middleware",
+    "@models": "src/models",
+    "@routes": "src/routes",
+    "@services": "src/services",
+    "@type": "src/type"
+  },
   "author": "",
   "dependencies": {
     "@types/express": "^5.0.0",
@@ -8,9 +16,13 @@
     "connect-mongo": "^5.1.0",
     "debug": "^4.4.0",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "mongoose": "^8.11.0"
+    "module-alias": "^2.2.3",
+    "mongoose": "^8.11.0",
+    "tsconfig-paths": "^4.2.0",
+    "vite": "^6.2.0"
   },
   "description": "This is a hybrid web app that combines server-side rendering with client-side routing.",
   "devDependencies": {
@@ -19,7 +31,7 @@
     "@types/debug": "^4.1.12",
     "@types/dotenv": "^6.1.1",
     "@types/express-session": "^1.18.1",
-    "@types/node": "^22.13.5",
+    "@types/node": "^22.13.8",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
     "eslint": "^9.21.0",
@@ -29,7 +41,8 @@
     "prettier": "^3.5.2",
     "prettier-eslint": "^16.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "directories": {
     "test": "test"
@@ -39,6 +52,8 @@
   "main": "server.js",
   "name": "v0.0.1",
   "scripts": {
+    "build": "tsc --project tsconfig.json && tsc --project tsconfig.views.json",
+    "lint": "eslint src --fix",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
