--- a/v0.0.1/tsconfig.views.json
+++ b/v0.0.1/tsconfig.views.json
@@ -26,12 +26,12 @@
 
     /* Modules */
     "module": "ESNext",                                  /* Specify what module code is generated. */
-    "rootDir": "./src",                                  /* Specify the root folder within your source files. */
+    "rootDir": "./src/views",                            /* Specify the root folder within your source files. */
     "moduleResolution": "node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": "./",                                     /* Specify the base directory to resolve non-relative module names. */
-    "paths": {
-        "@/*": ["src/*"]
-      },                                                 /* Specify a set of entries that re-map imports to additional lookup locations. */
+    // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
+    // "paths": {
+    //     "@/*": ["src/views/*"]
+    //   },                                              /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
@@ -60,7 +60,7 @@
     // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
     // "noEmit": true,                                   /* Disable emitting files from a compilation. */
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
-    "outDir": "./dist/",                                 /* Specify an output folder for all emitted files. */
+    "outDir": "./public/",                               /* Specify an output folder for all emitted files. */
     "removeComments": true,                              /* Disable emitting comments. */
     // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
     // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
@@ -111,11 +111,10 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": [
-    "node_modules",
-    "dist", 
-    "src/views/**/*", // Exclude the views folder from this build
+    "node_modules"
   ],
+  "extends": "./tsconfig.json",  
   "include": [
-    "src/**/*"
+    "src/views/**/*"
   ],
 }
