--- a/v0.0.1/package.json
+++ b/v0.0.1/package.json
@@ -1,11 +1,6 @@
 {
   "_moduleAliases": {
-    "@": "src",
-    "@middleware": "src/middleware",
-    "@models": "src/models",
-    "@routes": "src/routes",
-    "@services": "src/services",
-    "@type": "src/type"
+    "@": "dist"
   },
   "author": "",
   "dependencies": {
@@ -21,7 +16,6 @@
     "express-session": "^1.18.1",
     "module-alias": "^2.2.3",
     "mongoose": "^8.11.0",
-    "tsconfig-paths": "^4.2.0",
     "vite": "^6.2.0"
   },
   "description": "This is a hybrid web app that combines server-side rendering with client-side routing.",
@@ -38,9 +32,12 @@
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.5.2",
     "prettier-eslint": "^16.3.0",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4"
   },
@@ -52,9 +49,11 @@
   "main": "server.js",
   "name": "v0.0.1",
   "scripts": {
-    "build": "tsc --project tsconfig.json && tsc --project tsconfig.views.json",
+    "build": "npm-run-all clean build:tsc",
+    "build:tsc": "tsc --project tsconfig.json && tsc --project tsconfig.views.json",
+    "clean": "rimraf dist",
     "lint": "eslint src --fix",
-    "start": "node server.js",
+    "start": "node -r tsconfig-paths/register ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
