Neatly extend tsconfig and additionally formatted tsconfig. Removed some temps from app.js

--- a/v0.0.1/tsconfig.json
+++ b/v0.0.1/tsconfig.json
@@ -20,10 +20,7 @@
     // "jsxFactory": "",                                 /* Specify the JSX factory function used when targeting React JSX emit, e.g. 'React.createElement' or 'h'. */
     // "jsxFragmentFactory": "",                         /* Specify the JSX Fragment reference used for fragments when targeting React JSX emit e.g. 'React.Fragment' or 'Fragment'. */
     // "jsxImportSource": "",                            /* Specify module specifier used to import the JSX factory functions when using 'jsx: react-jsx*'. */
-    "lib": [
-      "ES2016",
-      "DOM"
-    ],                                                   /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+    "lib": ["ES2016", "DOM"],                            /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
     // "noLib": true,                                    /* Disable including any library files, including the default lib.d.ts. */
     // "reactNamespace": "",                             /* Specify the object invoked for 'createElement'. This only applies when targeting 'react' JSX emit. */
@@ -43,12 +40,8 @@
     // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
     // "noUncheckedSideEffectImports": true,             /* Check side effect imports. */
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@routes/*": [
-        "src/routes/*"
-      ],
+      "@/*": ["src/*"],
+      "@routes/*": ["src/routes/*"],
     },                                                   /* Specify a set of entries that re-map imports to additional lookup locations. */
     "resolveJsonModule": true,                           /* Enable importing .json files. */
     // "resolvePackageJsonExports": true,                /* Use the package.json 'exports' field when resolving package imports. */
@@ -104,7 +97,7 @@
     // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
     // "allowUnusedLabels": true,                        /* Disable error reporting for unused labels. */
     "alwaysStrict": true,                                /* Ensure 'use strict' is always emitted. */
-    // "exactOptionalPropertyTypes": true,                  /* Interpret optional property types as written, rather than adding 'undefined'. */
+    "exactOptionalPropertyTypes": true,                  /* Interpret optional property types as written, rather than adding 'undefined'. */
     "noFallthroughCasesInSwitch": true,                  /* Enable error reporting for fallthrough cases in switch statements. */
     "noImplicitAny": true,                               /* Enable error reporting for expressions and declarations with an implied 'any' type. */
     "noImplicitOverride": true,                          /* Ensure overriding members in derived classes are marked with an override modifier. */
@@ -123,7 +116,7 @@
     "useUnknownInCatchVariables": true,                  /* Default catch clause variables as 'unknown' instead of 'any'. */
     
     /* Completeness */
-    
+
     "skipDefaultLibCheck": true,                         /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
