Works. Before restricting eslint rules even more

--- a/v0.0.1/.vscode/tasks.json
+++ b/v0.0.1/.vscode/tasks.json
@@ -4,7 +4,7 @@
 	  {
 		"label": "lint",
 		"type": "shell",
-		"command": "npm run lint",
+		"command": "./sh/clear-and-run-lint.sh",
 		"problemMatcher": ["$eslint-stylish"],
 		"group": {
 		  "kind": "build",
