--- a/v0.0.1/package.json
+++ b/v0.0.1/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.96",
+    "@types/xmldom": "^0.1.34",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "connect-mongo": "^5.1.0",
@@ -14,9 +15,11 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "jsdom": "^26.0.0",
     "module-alias": "^2.2.3",
     "mongoose": "^8.11.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "xmldom": "^0.6.0"
   },
   "description": "This is a hybrid web app that combines server-side rendering with client-side routing.",
   "devDependencies": {
@@ -25,6 +28,7 @@
     "@types/debug": "^4.1.12",
     "@types/dotenv": "^6.1.1",
     "@types/express-session": "^1.18.1",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.8",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
@@ -52,7 +56,7 @@
     "build": "npm-run-all clean build:tsc",
     "build:tsc": "tsc --project tsconfig.json && tsc --project tsconfig.views.json",
     "clean": "rimraf dist",
-    "lint": "eslint src --fix",
+    "lint": "cls eslint src --fix",
     "start": "node -r tsconfig-paths/register ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
