--- a/v0.0.1/tsconfig.json
+++ b/v0.0.1/tsconfig.json
@@ -20,7 +20,7 @@
     // "jsxFactory": "",                                 /* Specify the JSX factory function used when targeting React JSX emit, e.g. 'React.createElement' or 'h'. */
     // "jsxFragmentFactory": "",                         /* Specify the JSX Fragment reference used for fragments when targeting React JSX emit e.g. 'React.Fragment' or 'Fragment'. */
     // "jsxImportSource": "",                            /* Specify module specifier used to import the JSX factory functions when using 'jsx: react-jsx*'. */
-    "lib": ["ES2016", "DOM"],                            /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+    "lib": ["ES2016", "DOM", "es6"],                     /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
     // "noLib": true,                                    /* Disable including any library files, including the default lib.d.ts. */
     // "reactNamespace": "",                             /* Specify the object invoked for 'createElement'. This only applies when targeting 'react' JSX emit. */
