First Fibber implementation. Works

--- a/v0.0.1/.vscode/settings.json
+++ b/v0.0.1/.vscode/settings.json
@@ -36,5 +36,8 @@
   "files.exclude": {
     "**/.git": false
   },
-  "terminal.integrated.cwd": "${fileDirname}"
+  "terminal.integrated.cwd": "${fileDirname}",
+  "typescript.format.semicolons": "remove",
+  "typescript.preferences.importModuleSpecifierEnding": "js",
+  "typescript.preferences.quoteStyle": "single"
 }
