--- a/v0.0.1/package.json
+++ b/v0.0.1/package.json
@@ -1,16 +1,16 @@
 {
+  "": "./package.json",
   "_moduleAliases": {
     "@": "dist"
   },
   "author": "",
   "dependencies": {
-    "@types/express": "^5.0.0",
-    "@types/mongoose": "^5.11.96",
-    "@types/xmldom": "^0.1.34",
+    "@xmldom/xmldom": "^0.9.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "connect-mongo": "^5.1.0",
     "debug": "^4.4.0",
+    "del-cli": "^6.0.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -18,8 +18,7 @@
     "jsdom": "^26.0.0",
     "module-alias": "^2.2.3",
     "mongoose": "^8.11.0",
-    "vite": "^6.2.0",
-    "xmldom": "^0.6.0"
+    "xpath": "^0.0.34"
   },
   "description": "This is a hybrid web app that combines server-side rendering with client-side routing.",
   "devDependencies": {
@@ -36,10 +35,10 @@
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
+    "nodemon": "^3.1.9",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.2",
     "prettier-eslint": "^16.3.0",
-    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
@@ -53,11 +52,12 @@
   "main": "server.js",
   "name": "v0.0.1",
   "scripts": {
+    "-start": "node -r tsconfig-paths/register ./server.js",
     "build": "npm-run-all clean build:tsc",
     "build:tsc": "tsc --project tsconfig.json && tsc --project tsconfig.views.json",
-    "clean": "rimraf dist",
+    "clean": "del-cli ./dist --force",
     "lint": "cls eslint src --fix",
-    "start": "node -r tsconfig-paths/register ./server.js",
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
