--- a/v0.0.1/src/views/tsconfig.json
+++ b/v0.0.1/src/views/tsconfig.json
@@ -7,7 +7,7 @@
     "paths": {
     //   "@/*": ["src/views/*"]
     },                                                   /* Specify a set of entries that re-map imports to additional lookup locations. */
-    "rootDir": "./",                                 /* Specify the root folder within your source files. */
+    // "rootDir": "./",                                  /* Specify the root folder within your source files. */
 
     /* Emit */
 
