--- a/v0.0.1/tsconfig.json
+++ b/v0.0.1/tsconfig.json
@@ -47,7 +47,7 @@
     // "resolvePackageJsonExports": true,                /* Use the package.json 'exports' field when resolving package imports. */
     // "resolvePackageJsonImports": true,                /* Use the package.json 'imports' field when resolving imports. */
     // "rewriteRelativeImportExtensions": true,          /* Rewrite '.ts', '.tsx', '.mts', and '.cts' file extensions in relative import paths to their JavaScript equivalent in output files. */
-    "rootDir": "./src",                                  /* Specify the root folder within your source files. */
+    // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
@@ -126,7 +126,7 @@
     "src/views/**/*", // Exclude the views folder from this build
   ],
   "include": [
-    "src/**/*"
+    "src/**/*.ts"
   ],
   "ts-node": {
     "esm": true,
