Casual. Working on corresponding a view existence to the request

--- a/v0.0.1/package.json
+++ b/v0.0.1/package.json
@@ -54,7 +54,7 @@
   "scripts": {
     "-start": "node -r tsconfig-paths/register ./server.js",
     "build": "npm-run-all clean build:tsc",
-    "build:tsc": "tsc --project tsconfig.json && tsc --project ./src/views/tsconfig.json",
+    "build:tsc": "tsc --project tsconfig.json && tsc --project ./src/view/tsconfig.json",
     "clean": "del-cli ./dist --force",
     "lint": "cls eslint src --fix",
     "start": "nodemon",
