--- a/v0.0.1/tsconfig.json
+++ b/v0.0.1/tsconfig.json
@@ -41,7 +41,7 @@
     // "noUncheckedSideEffectImports": true,             /* Check side effect imports. */
     "paths": {
       "@/*": ["src/*"],
-      "@routes/*": ["src/routes/*"],
+      // "@routes/*": ["src/-routes/*"],
     },                                                   /* Specify a set of entries that re-map imports to additional lookup locations. */
     "resolveJsonModule": true,                           /* Enable importing .json files. */
     // "resolvePackageJsonExports": true,                /* Use the package.json 'exports' field when resolving package imports. */
@@ -121,9 +121,10 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": [
-    "node_modules",
+    "**/-*",
     "dist",
-    "src/views/**/*", // Exclude the views folder from this build
+    "node_modules",
+    "src/view/**/*",
   ],
   "include": [
     "src/**/*.ts"
