--- a/v0.0.1/package.json
+++ b/v0.0.1/package.json
@@ -18,6 +18,7 @@
     "jsdom": "^26.0.0",
     "module-alias": "^2.2.3",
     "mongoose": "^8.11.0",
+    "pino": "^9.7.0",
     "xpath": "^0.0.34"
   },
   "description": "This is a hybrid web app that combines server-side rendering with client-side routing.",
@@ -28,6 +29,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express-session": "^1.18.1",
     "@types/jsdom": "^21.1.7",
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^22.13.9",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
@@ -49,7 +51,7 @@
   },
   "keywords": [],
   "license": "ISC",
-  "main": "server.js",
+  "main": "./dist/bootstrap.js",
   "name": "v0.0.1",
   "scripts": {
     "-start": "node -r tsconfig-paths/register ./server.js",
